<resources>
    <string name="app_name">Nabehha</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="user_info">userInfo</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="action_settings">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="registrater">Register</string>
    <string name="add_note">Add Note</string>
    <string name="add_time">Add Time</string>
    <string name="date">Date</string>
    <string name="Add_Date">add_date</string>
    <string name="Edit_Date">Edit_date</string>
    <string name="Edit_Trip">Edit Trip</string>

    <string name="cancel">Cancel</string>
    <string name="enter_your_date">Enter date</string>
    <string name="add_trip">Add</string>
    <string name="add_trip_anas">Add Trip</string>
    <string name="enter_your_time">Enter time</string>
    <string name="time">Time</string>
    <string name="name">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="stop">Cancel</string>
    <array name="select_state">
        <item name="Rounded">Rounded</item>
        <item name="one_direction">One Direction</item>
    </array>
</resources>
