<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.one.direction.nabehha.ui.addtrip.AddTripFragment">

            <EditText
                android:id="@+id/tripNameET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="Enter Trip Name"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="146dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tripNameET">

                <fragment
                    android:id="@+id/start_point_autocomplete_fragment"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    android:layout_width="276dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="parent" />

                <fragment
                    android:id="@+id/end_point_autocomplete_fragment"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    android:layout_width="279dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.3"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    app:layout_constraintTop_toBottomOf="@+id/start_point_autocomplete_fragment" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_route"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_route"
                    app:layout_constraintEnd_toEndOf="@+id/imageView6"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6" />
            </android.support.constraint.ConstraintLayout>


            <LinearLayout
                android:id="@+id/addTripLayout"
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="@+id/addTripTypeSpinner"
                app:layout_constraintStart_toStartOf="@+id/addTripTypeSpinner"
                app:layout_constraintTop_toBottomOf="@+id/addTripTypeSpinner">

                <Button
                    android:id="@+id/cancelNote"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/cancel"
                    android:textColor="#ffffff"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="586dp" />

                <Button
                    android:id="@+id/editTripBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="45dp"
                    android:layout_weight="1"
                    android:width="0dp"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/Edit_Trip"
                    android:textColor="#ffffff"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteY="586dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/timeLayout"
                android:layout_width="295dp"
                android:layout_height="59dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/dateLayout">

                <EditText
                    android:id="@+id/tripTimeET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/enter_your_time"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="205dp" />

                <Button
                    android:id="@+id/tripTimeBtn"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/roundedbutton"
                    android:paddingRight="0dp"
                    android:text="@string/add_time"
                    android:textColor="#ffffff"
                    android:textSize="13sp"
                    tools:layout_editor_absoluteX="287dp"
                    tools:layout_editor_absoluteY="202dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dateLayout"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <EditText
                    android:id="@+id/tripDateET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/enter_your_date"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="205dp" />

                <Button
                    android:id="@+id/tripDateBtn"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/roundedbutton"
                    android:paddingRight="0dp"
                    android:text="@string/Add_Date"
                    android:textColor="#ffffff"
                    android:textSize="13sp"
                    tools:layout_editor_absoluteX="287dp"
                    tools:layout_editor_absoluteY="202dp" />

            </LinearLayout>

            <Spinner
                android:id="@+id/addTripTypeSpinner"
                style="@style/spinner_style"
                android:layout_width="0dp"
                android:layout_height="39dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_calendar"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_clock_circular_outline"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeLayout">

                <LinearLayout
                    android:id="@+id/addNoteLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/textView_add_note"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="11dp"
                        android:layout_marginLeft="11dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="0dp"
                        android:layout_toLeftOf="@+id/image_add_note"
                        android:layout_weight="3"
                        android:hint="Add note"
                        android:textColorHint="#14ABBD" />

                    <ImageView
                        android:id="@+id/image_add_note"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_weight="1"
                        android:tint="#14ABBD"
                        app:srcCompat="@drawable/edit" />

                </LinearLayout>


                <ListView
                    android:id="@+id/list_view_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addNoteLayout" />

            </LinearLayout>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
